--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('main.jpg') no-repeat center center/cover; 
+    background: url('main.avif') no-repeat center center/cover; 
     filter: blur(8px) brightness(0.6); 
     transform: scale(1.05); 
     z-index: -1;
